# village

./: README.md  database.md  dev-server.md  server-experiments.lisp  workflows.md
dev-server-temp-html/: index.html  style.css
static/: style.css
village_py/: README.md  app.py  pyproject.toml  repository.py
village_py/models/: users.py
village_py/scripts/: create_user.py
village_py/templates/: index.html  login.html
village_py/village/: app.py  post_graph.py  repository.py
village_py/village/images/: thumbnails.py
village_py/village/models/: posts.py  users.py
village_py/village/scripts/: create_user.py  force_reset_password.py  update_thumbnail.py
village_py/village/templates/: header.html  index.html  login.html  new_post.html  post.html  posts.html  update_password.html  user_profile.html  user_profile_editable.html  users.html
